PROJECT( xerces-c )
SET (ProjectDir ${xerces-c_SOURCE_DIR})
MESSAGE(STATUS "xerces-c ProjectDir: " ${ProjectDir})

SET ( SOURCES
  ${ProjectDir}/src/xercesc/util/Base64.cpp
  ${ProjectDir}/src/xercesc/util/BinFileInputStream.cpp
  ${ProjectDir}/src/xercesc/util/BinInputStream.cpp
  ${ProjectDir}/src/xercesc/util/BinMemInputStream.cpp
  ${ProjectDir}/src/xercesc/util/BitSet.cpp
  ${ProjectDir}/src/xercesc/util/DefaultPanicHandler.cpp
  ${ProjectDir}/src/xercesc/util/EncodingValidator.cpp
  ${ProjectDir}/src/xercesc/util/HeaderDummy.cpp
  ${ProjectDir}/src/xercesc/util/HexBin.cpp
  ${ProjectDir}/src/xercesc/util/KVStringPair.cpp
  ${ProjectDir}/src/xercesc/util/Mutexes.cpp
  ${ProjectDir}/src/xercesc/util/PanicHandler.cpp
  ${ProjectDir}/src/xercesc/util/PlatformUtils.cpp
  ${ProjectDir}/src/xercesc/util/PSVIUni.cpp
  ${ProjectDir}/src/xercesc/util/QName.cpp
  ${ProjectDir}/src/xercesc/util/StringPool.cpp
  ${ProjectDir}/src/xercesc/util/SynchronizedStringPool.cpp
  ${ProjectDir}/src/xercesc/util/TransService.cpp
  ${ProjectDir}/src/xercesc/util/XMemory.cpp
  ${ProjectDir}/src/xercesc/util/XML256TableTranscoder.cpp
  ${ProjectDir}/src/xercesc/util/XML88591Transcoder.cpp
  ${ProjectDir}/src/xercesc/util/XMLAbstractDoubleFloat.cpp
  ${ProjectDir}/src/xercesc/util/XMLASCIITranscoder.cpp
  ${ProjectDir}/src/xercesc/util/XMLBigDecimal.cpp
  ${ProjectDir}/src/xercesc/util/XMLBigInteger.cpp
  ${ProjectDir}/src/xercesc/util/XMLChar.cpp
  ${ProjectDir}/src/xercesc/util/XMLChTranscoder.cpp
  ${ProjectDir}/src/xercesc/util/XMLDateTime.cpp
  ${ProjectDir}/src/xercesc/util/XMLDouble.cpp
  ${ProjectDir}/src/xercesc/util/XMLEBCDICTranscoder.cpp
  ${ProjectDir}/src/xercesc/util/XMLException.cpp
  ${ProjectDir}/src/xercesc/util/XMLFloat.cpp
  ${ProjectDir}/src/xercesc/util/XMLIBM1047Transcoder.cpp
  ${ProjectDir}/src/xercesc/util/XMLIBM1140Transcoder.cpp
  ${ProjectDir}/src/xercesc/util/XMLInitializer.cpp
  ${ProjectDir}/src/xercesc/util/XMLMsgLoader.cpp
  ${ProjectDir}/src/xercesc/util/XMLNumber.cpp
  ${ProjectDir}/src/xercesc/util/XMLString.cpp
  ${ProjectDir}/src/xercesc/util/XMLStringTokenizer.cpp
  ${ProjectDir}/src/xercesc/util/XMLUCS4Transcoder.cpp
  ${ProjectDir}/src/xercesc/util/XMLUni.cpp
  ${ProjectDir}/src/xercesc/util/XMLUri.cpp
  ${ProjectDir}/src/xercesc/util/XMLURL.cpp
  ${ProjectDir}/src/xercesc/util/XMLUTF16Transcoder.cpp
  ${ProjectDir}/src/xercesc/util/XMLUTF8Transcoder.cpp
  ${ProjectDir}/src/xercesc/util/XMLWin1252Transcoder.cpp
  ${ProjectDir}/src/xercesc/util/MsgLoaders/Win32/Win32MsgLoader.cpp>
  ${ProjectDir}/src/xercesc/util/Transcoders/Win32/Win32TransService.cpp>
  ${ProjectDir}/src/xercesc/util/NetAccessors/BinHTTPInputStreamCommon.cpp
  ${ProjectDir}/src/xercesc/util/NetAccessors/WinSock/BinHTTPURLInputStream.cpp
  ${ProjectDir}/src/xercesc/util/NetAccessors/WinSock/WinSockNetAccessor.cpp
  ${ProjectDir}/src/xercesc/util/regx/ASCIIRangeFactory.cpp
  ${ProjectDir}/src/xercesc/util/regx/BlockRangeFactory.cpp
  ${ProjectDir}/src/xercesc/util/regx/BMPattern.cpp
  ${ProjectDir}/src/xercesc/util/regx/CharToken.cpp
  ${ProjectDir}/src/xercesc/util/regx/ClosureToken.cpp
  ${ProjectDir}/src/xercesc/util/regx/ConcatToken.cpp
  ${ProjectDir}/src/xercesc/util/regx/Match.cpp
  ${ProjectDir}/src/xercesc/util/regx/Op.cpp
  ${ProjectDir}/src/xercesc/util/regx/OpFactory.cpp
  ${ProjectDir}/src/xercesc/util/regx/ParenToken.cpp
  ${ProjectDir}/src/xercesc/util/regx/ParserForXMLSchema.cpp
  ${ProjectDir}/src/xercesc/util/regx/RangeFactory.cpp
  ${ProjectDir}/src/xercesc/util/regx/RangeToken.cpp
  ${ProjectDir}/src/xercesc/util/regx/RangeTokenMap.cpp
  ${ProjectDir}/src/xercesc/util/regx/RegularExpression.cpp
  ${ProjectDir}/src/xercesc/util/regx/RegxParser.cpp
  ${ProjectDir}/src/xercesc/util/regx/RegxUtil.cpp
  ${ProjectDir}/src/xercesc/util/regx/StringToken.cpp
  ${ProjectDir}/src/xercesc/util/regx/Token.cpp
  ${ProjectDir}/src/xercesc/util/regx/TokenFactory.cpp
  ${ProjectDir}/src/xercesc/util/regx/UnicodeRangeFactory.cpp
  ${ProjectDir}/src/xercesc/util/regx/UnionToken.cpp
  ${ProjectDir}/src/xercesc/util/regx/XMLRangeFactory.cpp
  ${ProjectDir}/src/xercesc/util/regx/XMLUniCharacter.cpp
  ${ProjectDir}/src/xercesc/util/FileManagers/WindowsFileMgr.cpp
  ${ProjectDir}/src/xercesc/util/MutexManagers/WindowsMutexMgr.cpp
  ${ProjectDir}/src/xercesc/framework/LocalFileFormatTarget.cpp
  ${ProjectDir}/src/xercesc/framework/LocalFileInputSource.cpp
  ${ProjectDir}/src/xercesc/framework/MemBufFormatTarget.cpp
  ${ProjectDir}/src/xercesc/framework/MemBufInputSource.cpp
  ${ProjectDir}/src/xercesc/framework/StdInInputSource.cpp
  ${ProjectDir}/src/xercesc/framework/StdOutFormatTarget.cpp
  ${ProjectDir}/src/xercesc/framework/URLInputSource.cpp
  ${ProjectDir}/src/xercesc/framework/Wrapper4DOMLSInput.cpp
  ${ProjectDir}/src/xercesc/framework/Wrapper4InputSource.cpp
  ${ProjectDir}/src/xercesc/framework/XMLAttDef.cpp
  ${ProjectDir}/src/xercesc/framework/XMLAttDefList.cpp
  ${ProjectDir}/src/xercesc/framework/XMLAttr.cpp
  ${ProjectDir}/src/xercesc/framework/XMLBuffer.cpp
  ${ProjectDir}/src/xercesc/framework/XMLBufferMgr.cpp
  ${ProjectDir}/src/xercesc/framework/XMLContentModel.cpp
  ${ProjectDir}/src/xercesc/framework/XMLDTDDescription.cpp
  ${ProjectDir}/src/xercesc/framework/XMLElementDecl.cpp
  ${ProjectDir}/src/xercesc/framework/XMLEntityDecl.cpp
  ${ProjectDir}/src/xercesc/framework/XMLFormatter.cpp
  ${ProjectDir}/src/xercesc/framework/XMLGrammarDescription.cpp
  ${ProjectDir}/src/xercesc/framework/XMLGrammarPoolImpl.cpp
  ${ProjectDir}/src/xercesc/framework/XMLNotationDecl.cpp
  ${ProjectDir}/src/xercesc/framework/XMLRecognizer.cpp
  ${ProjectDir}/src/xercesc/framework/XMLRefInfo.cpp
  ${ProjectDir}/src/xercesc/framework/XMLSchemaDescription.cpp
  ${ProjectDir}/src/xercesc/framework/XMLValidator.cpp
  ${ProjectDir}/src/xercesc/framework/psvi/PSVIAttribute.cpp
  ${ProjectDir}/src/xercesc/framework/psvi/PSVIAttributeList.cpp
  ${ProjectDir}/src/xercesc/framework/psvi/PSVIElement.cpp
  ${ProjectDir}/src/xercesc/framework/psvi/PSVIItem.cpp
  ${ProjectDir}/src/xercesc/framework/psvi/XSAnnotation.cpp
  ${ProjectDir}/src/xercesc/framework/psvi/XSAttributeDeclaration.cpp
  ${ProjectDir}/src/xercesc/framework/psvi/XSAttributeGroupDefinition.cpp
  ${ProjectDir}/src/xercesc/framework/psvi/XSAttributeUse.cpp
  ${ProjectDir}/src/xercesc/framework/psvi/XSComplexTypeDefinition.cpp
  ${ProjectDir}/src/xercesc/framework/psvi/XSElementDeclaration.cpp
  ${ProjectDir}/src/xercesc/framework/psvi/XSFacet.cpp
  ${ProjectDir}/src/xercesc/framework/psvi/XSIDCDefinition.cpp
  ${ProjectDir}/src/xercesc/framework/psvi/XSModel.cpp
  ${ProjectDir}/src/xercesc/framework/psvi/XSModelGroup.cpp
  ${ProjectDir}/src/xercesc/framework/psvi/XSModelGroupDefinition.cpp
  ${ProjectDir}/src/xercesc/framework/psvi/XSMultiValueFacet.cpp
  ${ProjectDir}/src/xercesc/framework/psvi/XSNamespaceItem.cpp
  ${ProjectDir}/src/xercesc/framework/psvi/XSNotationDeclaration.cpp
  ${ProjectDir}/src/xercesc/framework/psvi/XSObject.cpp
  ${ProjectDir}/src/xercesc/framework/psvi/XSParticle.cpp
  ${ProjectDir}/src/xercesc/framework/psvi/XSSimpleTypeDefinition.cpp
  ${ProjectDir}/src/xercesc/framework/psvi/XSTypeDefinition.cpp
  ${ProjectDir}/src/xercesc/framework/psvi/XSValue.cpp
  ${ProjectDir}/src/xercesc/framework/psvi/XSWildcard.cpp
  ${ProjectDir}/src/xercesc/internal/BinFileOutputStream.cpp
  ${ProjectDir}/src/xercesc/internal/BinMemOutputStream.cpp
  ${ProjectDir}/src/xercesc/framework/BinOutputStream.cpp
  ${ProjectDir}/src/xercesc/internal/DGXMLScanner.cpp
  ${ProjectDir}/src/xercesc/internal/ElemStack.cpp
  ${ProjectDir}/src/xercesc/internal/IGXMLScanner.cpp
  ${ProjectDir}/src/xercesc/internal/IGXMLScanner2.cpp
  ${ProjectDir}/src/xercesc/internal/MemoryManagerImpl.cpp
  ${ProjectDir}/src/xercesc/internal/ReaderMgr.cpp
  ${ProjectDir}/src/xercesc/internal/SGXMLScanner.cpp
  ${ProjectDir}/src/xercesc/internal/ValidationContextImpl.cpp
  ${ProjectDir}/src/xercesc/internal/VecAttributesImpl.cpp
  ${ProjectDir}/src/xercesc/internal/VecAttrListImpl.cpp
  ${ProjectDir}/src/xercesc/internal/WFXMLScanner.cpp
  ${ProjectDir}/src/xercesc/internal/XMLReader.cpp
  ${ProjectDir}/src/xercesc/internal/XMLScanner.cpp
  ${ProjectDir}/src/xercesc/internal/XMLScannerResolver.cpp
  ${ProjectDir}/src/xercesc/internal/XProtoType.cpp
  ${ProjectDir}/src/xercesc/internal/XSAXMLScanner.cpp
  ${ProjectDir}/src/xercesc/internal/XSerializeEngine.cpp
  ${ProjectDir}/src/xercesc/internal/XSObjectFactory.cpp
  ${ProjectDir}/src/xercesc/internal/XTemplateSerializer.cpp
  ${ProjectDir}/src/xercesc/sax/Dummy.cpp
  ${ProjectDir}/src/xercesc/sax/InputSource.cpp
  ${ProjectDir}/src/xercesc/sax/SAXException.cpp
  ${ProjectDir}/src/xercesc/sax/SAXParseException.cpp
  ${ProjectDir}/src/xercesc/parsers/AbstractDOMParser.cpp
  ${ProjectDir}/src/xercesc/parsers/DOMLSParserImpl.cpp
  ${ProjectDir}/src/xercesc/parsers/SAX2XMLFilterImpl.cpp
  ${ProjectDir}/src/xercesc/parsers/SAX2XMLReaderImpl.cpp
  ${ProjectDir}/src/xercesc/parsers/SAXParser.cpp
  ${ProjectDir}/src/xercesc/parsers/XercesDOMParser.cpp
  ${ProjectDir}/src/xercesc/validators/common/AllContentModel.cpp
  ${ProjectDir}/src/xercesc/validators/common/CMAny.cpp
  ${ProjectDir}/src/xercesc/validators/common/CMBinaryOp.cpp
  ${ProjectDir}/src/xercesc/validators/common/CMUnaryOp.cpp
  ${ProjectDir}/src/xercesc/validators/common/ContentLeafNameTypeVector.cpp
  ${ProjectDir}/src/xercesc/validators/common/ContentSpecNode.cpp
  ${ProjectDir}/src/xercesc/validators/common/DFAContentModel.cpp
  ${ProjectDir}/src/xercesc/validators/common/Grammar.cpp
  ${ProjectDir}/src/xercesc/validators/common/GrammarResolver.cpp
  ${ProjectDir}/src/xercesc/validators/common/MixedContentModel.cpp
  ${ProjectDir}/src/xercesc/validators/common/SimpleContentModel.cpp
  ${ProjectDir}/src/xercesc/validators/datatype/AbstractNumericFacetValidator.cpp
  ${ProjectDir}/src/xercesc/validators/datatype/AbstractNumericValidator.cpp
  ${ProjectDir}/src/xercesc/validators/datatype/AbstractStringValidator.cpp
  ${ProjectDir}/src/xercesc/validators/datatype/AnySimpleTypeDatatypeValidator.cpp
  ${ProjectDir}/src/xercesc/validators/datatype/AnyURIDatatypeValidator.cpp
  ${ProjectDir}/src/xercesc/validators/datatype/Base64BinaryDatatypeValidator.cpp
  ${ProjectDir}/src/xercesc/validators/datatype/BooleanDatatypeValidator.cpp
  ${ProjectDir}/src/xercesc/validators/datatype/DatatypeValidator.cpp
  ${ProjectDir}/src/xercesc/validators/datatype/DatatypeValidatorFactory.cpp
  ${ProjectDir}/src/xercesc/validators/datatype/DateDatatypeValidator.cpp
  ${ProjectDir}/src/xercesc/validators/datatype/DateTimeDatatypeValidator.cpp
  ${ProjectDir}/src/xercesc/validators/datatype/DateTimeValidator.cpp
  ${ProjectDir}/src/xercesc/validators/datatype/DayDatatypeValidator.cpp
  ${ProjectDir}/src/xercesc/validators/datatype/DecimalDatatypeValidator.cpp
  ${ProjectDir}/src/xercesc/validators/datatype/DoubleDatatypeValidator.cpp
  ${ProjectDir}/src/xercesc/validators/datatype/DurationDatatypeValidator.cpp
  ${ProjectDir}/src/xercesc/validators/datatype/ENTITYDatatypeValidator.cpp
  ${ProjectDir}/src/xercesc/validators/datatype/FloatDatatypeValidator.cpp
  ${ProjectDir}/src/xercesc/validators/datatype/HexBinaryDatatypeValidator.cpp
  ${ProjectDir}/src/xercesc/validators/datatype/IDDatatypeValidator.cpp
  ${ProjectDir}/src/xercesc/validators/datatype/IDREFDatatypeValidator.cpp
  ${ProjectDir}/src/xercesc/validators/datatype/ListDatatypeValidator.cpp
  ${ProjectDir}/src/xercesc/validators/datatype/MonthDatatypeValidator.cpp
  ${ProjectDir}/src/xercesc/validators/datatype/MonthDayDatatypeValidator.cpp
  ${ProjectDir}/src/xercesc/validators/datatype/NameDatatypeValidator.cpp
  ${ProjectDir}/src/xercesc/validators/datatype/NCNameDatatypeValidator.cpp
  ${ProjectDir}/src/xercesc/validators/datatype/NOTATIONDatatypeValidator.cpp
  ${ProjectDir}/src/xercesc/validators/datatype/QNameDatatypeValidator.cpp
  ${ProjectDir}/src/xercesc/validators/datatype/StringDatatypeValidator.cpp
  ${ProjectDir}/src/xercesc/validators/datatype/TimeDatatypeValidator.cpp
  ${ProjectDir}/src/xercesc/validators/datatype/UnionDatatypeValidator.cpp
  ${ProjectDir}/src/xercesc/validators/datatype/XMLCanRepGroup.cpp
  ${ProjectDir}/src/xercesc/validators/datatype/YearDatatypeValidator.cpp
  ${ProjectDir}/src/xercesc/validators/datatype/YearMonthDatatypeValidator.cpp
  ${ProjectDir}/src/xercesc/validators/DTD/DTDAttDef.cpp
  ${ProjectDir}/src/xercesc/validators/DTD/DTDAttDefList.cpp
  ${ProjectDir}/src/xercesc/validators/DTD/DTDElementDecl.cpp
  ${ProjectDir}/src/xercesc/validators/DTD/DTDEntityDecl.cpp
  ${ProjectDir}/src/xercesc/validators/DTD/DTDGrammar.cpp
  ${ProjectDir}/src/xercesc/validators/DTD/DTDScanner.cpp
  ${ProjectDir}/src/xercesc/validators/DTD/DTDValidator.cpp
  ${ProjectDir}/src/xercesc/validators/DTD/XMLDTDDescriptionImpl.cpp
  ${ProjectDir}/src/xercesc/validators/schema/ComplexTypeInfo.cpp
  ${ProjectDir}/src/xercesc/validators/schema/GeneralAttributeCheck.cpp
  ${ProjectDir}/src/xercesc/validators/schema/NamespaceScope.cpp
  ${ProjectDir}/src/xercesc/validators/schema/SchemaAttDef.cpp
  ${ProjectDir}/src/xercesc/validators/schema/SchemaAttDefList.cpp
  ${ProjectDir}/src/xercesc/validators/schema/SchemaElementDecl.cpp
  ${ProjectDir}/src/xercesc/validators/schema/SchemaGrammar.cpp
  ${ProjectDir}/src/xercesc/validators/schema/SchemaInfo.cpp
  ${ProjectDir}/src/xercesc/validators/schema/SchemaSymbols.cpp
  ${ProjectDir}/src/xercesc/validators/schema/SchemaValidator.cpp
  ${ProjectDir}/src/xercesc/validators/schema/SubstitutionGroupComparator.cpp
  ${ProjectDir}/src/xercesc/validators/schema/TraverseSchema.cpp
  ${ProjectDir}/src/xercesc/validators/schema/XercesAttGroupInfo.cpp
  ${ProjectDir}/src/xercesc/validators/schema/XercesElementWildcard.cpp
  ${ProjectDir}/src/xercesc/validators/schema/XercesGroupInfo.cpp
  ${ProjectDir}/src/xercesc/validators/schema/XMLSchemaDescriptionImpl.cpp
  ${ProjectDir}/src/xercesc/validators/schema/XSDDOMParser.cpp
  ${ProjectDir}/src/xercesc/validators/schema/XSDErrorReporter.cpp
  ${ProjectDir}/src/xercesc/validators/schema/XSDLocator.cpp
  ${ProjectDir}/src/xercesc/validators/schema/XUtil.cpp
  ${ProjectDir}/src/xercesc/validators/schema/identity/FieldActivator.cpp
  ${ProjectDir}/src/xercesc/validators/schema/identity/FieldValueMap.cpp
  ${ProjectDir}/src/xercesc/validators/schema/identity/IC_Field.cpp
  ${ProjectDir}/src/xercesc/validators/schema/identity/IC_Key.cpp
  ${ProjectDir}/src/xercesc/validators/schema/identity/IC_KeyRef.cpp
  ${ProjectDir}/src/xercesc/validators/schema/identity/IC_Selector.cpp
  ${ProjectDir}/src/xercesc/validators/schema/identity/IC_Unique.cpp
  ${ProjectDir}/src/xercesc/validators/schema/identity/IdentityConstraint.cpp
  ${ProjectDir}/src/xercesc/validators/schema/identity/IdentityConstraintHandler.cpp
  ${ProjectDir}/src/xercesc/validators/schema/identity/ValueStore.cpp
  ${ProjectDir}/src/xercesc/validators/schema/identity/ValueStoreCache.cpp
  ${ProjectDir}/src/xercesc/validators/schema/identity/XercesXPath.cpp
  ${ProjectDir}/src/xercesc/validators/schema/identity/XPathMatcher.cpp
  ${ProjectDir}/src/xercesc/validators/schema/identity/XPathMatcherStack.cpp
  ${ProjectDir}/src/xercesc/validators/schema/identity/XPathSymbols.cpp
  ${ProjectDir}/src/xercesc/sax2/sax2Dummy.cpp
  ${ProjectDir}/src/xercesc/dom/DOMException.cpp
  ${ProjectDir}/src/xercesc/dom/DOMLSException.cpp
  ${ProjectDir}/src/xercesc/dom/DOMRangeException.cpp
  ${ProjectDir}/src/xercesc/dom/DOMXPathException.cpp
  ${ProjectDir}/src/xercesc/dom/impl/DOMAttrImpl.cpp
  ${ProjectDir}/src/xercesc/dom/impl/DOMAttrMapImpl.cpp
  ${ProjectDir}/src/xercesc/dom/impl/DOMAttrNSImpl.cpp
  ${ProjectDir}/src/xercesc/dom/impl/DOMCDATASectionImpl.cpp
  ${ProjectDir}/src/xercesc/dom/impl/DOMCharacterDataImpl.cpp
  ${ProjectDir}/src/xercesc/dom/impl/DOMChildNode.cpp
  ${ProjectDir}/src/xercesc/dom/impl/DOMCommentImpl.cpp
  ${ProjectDir}/src/xercesc/dom/impl/DOMConfigurationImpl.cpp
  ${ProjectDir}/src/xercesc/dom/impl/DOMDeepNodeListImpl.cpp
  ${ProjectDir}/src/xercesc/dom/impl/DOMDocumentFragmentImpl.cpp
  ${ProjectDir}/src/xercesc/dom/impl/DOMDocumentImpl.cpp
  ${ProjectDir}/src/xercesc/dom/impl/DOMDocumentTypeImpl.cpp
  ${ProjectDir}/src/xercesc/dom/impl/DOMElementImpl.cpp
  ${ProjectDir}/src/xercesc/dom/impl/DOMElementNSImpl.cpp
  ${ProjectDir}/src/xercesc/dom/impl/DOMEntityImpl.cpp
  ${ProjectDir}/src/xercesc/dom/impl/DOMEntityReferenceImpl.cpp
  ${ProjectDir}/src/xercesc/dom/impl/DOMErrorImpl.cpp
  ${ProjectDir}/src/xercesc/dom/impl/DOMImplementationImpl.cpp
  ${ProjectDir}/src/xercesc/dom/impl/DOMImplementationListImpl.cpp
  ${ProjectDir}/src/xercesc/dom/impl/DOMImplementationRegistry.cpp
  ${ProjectDir}/src/xercesc/dom/impl/DOMLocatorImpl.cpp
  ${ProjectDir}/src/xercesc/dom/impl/DOMLSInputImpl.cpp
  ${ProjectDir}/src/xercesc/dom/impl/DOMLSOutputImpl.cpp
  ${ProjectDir}/src/xercesc/dom/impl/DOMLSSerializerImpl.cpp
  ${ProjectDir}/src/xercesc/dom/impl/DOMNamedNodeMapImpl.cpp
  ${ProjectDir}/src/xercesc/dom/impl/DOMNodeIDMap.cpp
  ${ProjectDir}/src/xercesc/dom/impl/DOMNodeImpl.cpp
  ${ProjectDir}/src/xercesc/dom/impl/DOMNodeIteratorImpl.cpp
  ${ProjectDir}/src/xercesc/dom/impl/DOMNodeListImpl.cpp
  ${ProjectDir}/src/xercesc/dom/impl/DOMNodeVector.cpp
  ${ProjectDir}/src/xercesc/dom/impl/DOMNormalizer.cpp
  ${ProjectDir}/src/xercesc/dom/impl/DOMNotationImpl.cpp
  ${ProjectDir}/src/xercesc/dom/impl/DOMParentNode.cpp
  ${ProjectDir}/src/xercesc/dom/impl/DOMProcessingInstructionImpl.cpp
  ${ProjectDir}/src/xercesc/dom/impl/DOMRangeImpl.cpp
  ${ProjectDir}/src/xercesc/dom/impl/DOMStringListImpl.cpp
  ${ProjectDir}/src/xercesc/dom/impl/DOMStringPool.cpp
  ${ProjectDir}/src/xercesc/dom/impl/DOMTextImpl.cpp
  ${ProjectDir}/src/xercesc/dom/impl/DOMTreeWalkerImpl.cpp
  ${ProjectDir}/src/xercesc/dom/impl/DOMTypeInfoImpl.cpp
  ${ProjectDir}/src/xercesc/dom/impl/DOMXPathExpressionImpl.cpp
  ${ProjectDir}/src/xercesc/dom/impl/DOMXPathNSResolverImpl.cpp
  ${ProjectDir}/src/xercesc/dom/impl/DOMXPathResultImpl.cpp
  ${ProjectDir}/src/xercesc/dom/impl/XSDElementNSImpl.cpp
  ${ProjectDir}/src/xercesc/xinclude/XIncludeDOMDocumentProcessor.cpp
  ${ProjectDir}/src/xercesc/xinclude/XIncludeLocation.cpp
  ${ProjectDir}/src/xercesc/xinclude/XIncludeUtils.cpp )

#ADD_DEFINITIONS(-DXERCES_STATIC_LIBRARY)
ADD_DEFINITIONS(-D_CRT_SECURE_NO_DEPRECATE)
ADD_DEFINITIONS(-DXERCES_BUILDING_LIBRARY)
ADD_DEFINITIONS(-DXERCES_USE_TRANSCODER_WINDOWS)
ADD_DEFINITIONS(-DXERCES_USE_WIN32_MSGLOADER)
ADD_DEFINITIONS(-DXERCES_USE_NETACCESSOR_WINSOCK)
ADD_DEFINITIONS(-DXERCES_USE_FILEMGR_WINDOWS)
ADD_DEFINITIONS(-DXERCES_USE_MUTEXMGR_WINDOWS)
ADD_DEFINITIONS(-DXERCES_PATH_DELIMITER_BACKSLASH)
ADD_DEFINITIONS(-DHAVE_STRICMP)
ADD_DEFINITIONS(-DHAVE_STRNICMP)
ADD_DEFINITIONS(-DHAVE_LIMITS_H)
ADD_DEFINITIONS(-DHAVE_SYS_TIMEB_H)
ADD_DEFINITIONS(-DHAVE_FTIME)
ADD_DEFINITIONS(-DHAVE_WCSUPR)
ADD_DEFINITIONS(-DHAVE_WCSLWR)
ADD_DEFINITIONS(-DHAVE_WCSICMP)
ADD_DEFINITIONS(-DHAVE_WCSNICMP)

ADD_LIBRARY( xerces-c SHARED ${SOURCES} )
TARGET_LINK_LIBRARIES(xerces-c)
INSTALL(TARGETS xerces-c RUNTIME DESTINATION ${DestinationDir})
